syntax="proto3";

package auth;

option go_package="./auth";

service AuthService {
  rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
  rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
  rpc RenewalTokenByRPC(RenewalTokenReq) returns (RenewalTokenResp) {}
  rpc Ping(Request) returns(Response) {}
}

message DeliverTokenReq {
  int64 id = 1;
}

message VerifyTokenReq {
  string token = 1;
}

message DeliveryResp {
  string access_token = 1;
}

message VerifyResp {
  bool res = 1;
}

message Request {
}

message Response {
  string msg = 1;
}

message RenewalTokenReq {
  string refresh_token = 1;
}

message RenewalTokenResp {
  string access_token = 1;
}

